# etlDataQualityProject

./: .env-example  404.html  README.md  index.html  infered_schema_kpi.py  main.py  mkdocs.yml  my_duckdb.db  objects.inv  pyproject.toml
app/: dba.py  etl.py  funcao.py  schema.py
docs/: index.md
search/: search_index.json
tests/: test_func_etl.py  test_funcao_ola_turma.py
