[tool.poetry]
name = "mydefaultdataproject"
version = "0.1.0"
description = ""
authors = ["Alan Lanceloth Rodrigues Silva <alan.lanceloth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ignr = "^2.2"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
duckdb = "^0.9.2"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.5"
pymdown-extensions = "^10.7"
mkdocs-bootstrap386 = "^0.0.2"
mkdocs-mermaid2-plugin = "^1.1.1"
pytest = "^8.0.1"
pydantic = "^2.6.2"
pandera = {extras = ["io"], version = "^0.18.0"}
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"